--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages",
-    "test.export": "next build && next export"
+    "deploy": "next build && next export && echo mkashima.com > out/CNAME && echo > out/.nojekyll && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages",
+    "test.export": "next build && next export && echo mkashima.com> out/CNAME && echo > out/.nojekyll"
   },
   "dependencies": {
     "next": "12.0.7",
